Studi de Encapsulamiento

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /POO/build/
 /AppAreaPerimeterRetangle/nbproject/private/
 /AppAreaPerimeterRetangle/build/
+/Encapsulamiento/nbproject/private/
+/Encapsulamiento/build/
