Cajero Automatico, Validacines y menu

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /AppAreaPerimeterRetangle/build/
 /Encapsulamiento/nbproject/private/
 /Encapsulamiento/build/
+/CajeroAutomatico/nbproject/private/
+/CajeroAutomatico/build/
+/CajeroAutomatico/dist/
