done,  utilizando interfaces y clases asbtractas y mas

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /HoyInterfaces/nbproject/private/
 /HoyInterfaces/build/
 /EjercicioIntegradorPokemon/nbproject/private/
+/EjercicioIntegradorPokemon/build/
