Proyecto inventario con mvc  crado, con el formluario y sus campos

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /HoyInterfaces/build/
 /EjercicioIntegradorPokemon/nbproject/private/
 /EjercicioIntegradorPokemon/build/
+/POOInventarioMVCI/nbproject/private/
+/InventarioPooMVC/nbproject/private/
