modelo producto y conexion done

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /EjercicioIntegradorPokemon/build/
 /POOInventarioMVCI/nbproject/private/
 /InventarioPooMVC/nbproject/private/
+/InventarioPooMVC/build/
