List with ArrayList done

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /POOInventarioMVCI/nbproject/private/
 /InventarioPooMVC/nbproject/private/
 /InventarioPooMVC/build/
+/ArrayLIst/nbproject/private/
+/ArrayLIst/build/
