--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /InventarioPooMVC/build/
 /ArrayLIst/nbproject/private/
 /ArrayLIst/build/
+/AppLinkedList/nbproject/private/
+/AppLinkedList/build/
