Stack (PIlas ) visto

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@
 /AppLinkedList/nbproject/private/
 /AppLinkedList/build/
 /InventarioPooMVC/dist/
+/AppPIlas/nbproject/private/
+/AppPIlas/build/
+/AppPIlas/dist/
