Relaciones de Calse 1 a 1 y 1 A N listo

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /AppPIlas/dist/
 /AppExcepciones/nbproject/private/
 /AppExcepciones/build/
+/AppRelaciones/nbproject/private/
+/AppRelaciones/build/
