Practica del juegoTerminada

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@
 /AppExcepciones/build/
 /AppRelaciones/nbproject/private/
 /AppRelaciones/build/
+/AppVideoJuego/nbproject/private/
+/AppVideoJuego/build/
+/AppVideoJuego/dist/
