CAsteos de long. int, double

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@
 /AppVideoJuego/nbproject/private/
 /AppVideoJuego/build/
 /AppVideoJuego/dist/
+/ConsumoAPI/nbproject/private/
+/Conversiones/nbproject/private/
+/Conversiones/build/
+/Conversiones/dist/
